解决ftp传输问题

--- a/文档/部署.md
+++ b/文档/部署.md
@@ -168,6 +168,12 @@ docker run -it -v /D/home:/home --gpus all --name ponding -p 8886:5000 --network
 
 
 ```
+docker run -it -v /D/home:/home --gpus all --name ponding_2_0 -p 5000:5000 --network water_bridge --network-alias ponding_server_2_0 ponding_server:v2.0
+```
+
+
+
+```
 ssh -L 8080:localhost:9000 mila@10.64.150.207 -p 23
 ```
 
